<resources>
    <string name="app_name">Quick Stocks</string>
    <string name="action_settings">Settings</string>
    <string name="last_trade">Last Trade</string>
    <string name="change">Change</string>
    <string name="percent_change">Change (%)</string>
    <string name="open_value">Open</string>
    <string name="highest">High</string>
    <string name="lowest">Low</string>
    <string name="previous_close">Previous Close</string>
    <string name="company_details">Company Details</string>
    <string name="total_deals">Transactions</string>
    <string name="deals_amount">Transaction volume</string>


    <string name="failed">Failed to connect</string>
    <string name="list_key">list_key</string>
    <string name="pref_fav">pref_fav</string>
    <string name="pref_normal">pref_normal</string>
    <string name="title_activity_settings">Settings</string>

    <string name="fab_add_remove">Add/Remove to Favorite</string>

    <string name="widget_text">Get Latest Market Price</string>
    <!-- Preference Titles -->
    <string name="settings_header">Default List</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="refresh">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
